samples/_failures_safe/1761460369_b2035a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d7d5fb03.c: In function ‘main’:
./samples/SAFE/__tmp_d7d5fb03.c:165:9: error: ‘token_list_d’ undeclared (first use in this function); did you mean ‘token_list_add’?
  165 |         token_list_d
      |         ^~~~~~~~~~~~
      |         token_list_add
./samples/SAFE/__tmp_d7d5fb03.c:165:9: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_d7d5fb03.c:165:21: error: expected ‘;’ at end of input
  165 |         token_list_d
      |                     ^
      |                     ;
./samples/SAFE/__tmp_d7d5fb03.c:165:9: error: expected declaration or statement at end of input
  165 |         token_list_d
      |         ^~~~~~~~~~~~
./samples/SAFE/__tmp_d7d5fb03.c:165:9: error: expected declaration or statement at end of input
